--- a/src/components/Common/Form/Group/Textarea/Textarea.scss
+++ b/src/components/Common/Form/Group/Textarea/Textarea.scss
@@ -1,4 +1,7 @@
-.Input {
+.Textarea {
+    height: 20rem;
+    overflow-y: auto;
+    resize: none;
     padding: 1rem 2rem;
     border-radius: 1.6rem;
     outline: none;
