--- a/src/components/Page/Projects/Project/Project.scss
+++ b/src/components/Page/Projects/Project/Project.scss
@@ -1,7 +1,7 @@
 @import '../../../../scss/color.scss';
 
 .Project {
-    padding: 1rem .9rem .8rem .9rem;
+    padding: 1rem .9rem .3rem .9rem;
     background-color: $primary;
     border-radius: 1.2rem;
     transition: 0.25s;
@@ -35,7 +35,8 @@
         }
     }
 
-    h3 {
+    h5 {
+        font-size: 1.2rem;
         margin-bottom: 1rem;
     }
 
