--- a/src/components/Page/Contact/Contact.scss
+++ b/src/components/Page/Contact/Contact.scss
@@ -1,1 +1,36 @@
-.Contact {}
+@import '../../../scss/color.scss';
+
+.Contact {
+    color: $white;
+
+    h3 {
+        text-align: center;
+        font-size: 3rem;
+        margin-bottom: 1rem;
+    }
+
+    .description {
+        margin: 1.5rem 0 5rem 0;
+    }
+
+    .informations {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: center;
+
+        .Button {
+            margin: 1rem;
+        }
+    }
+
+    .Form {
+        text-align: center;
+        width: 40%;
+        margin: auto;
+
+        .Button {
+            text-align: center;
+        }
+    }
+}
