--- a/src/components/Page/Header/Header.scss
+++ b/src/components/Page/Header/Header.scss
@@ -5,6 +5,7 @@
         background: $primary!important;
         font-size: 17px;
         position: fixed;
+        z-index: 999;
 
         .Brand {
             span:first-child {
