--- a/src/components/Page/Projects/Projects.scss
+++ b/src/components/Page/Projects/Projects.scss
@@ -3,9 +3,9 @@
 .Projects {
     color: $white;
     padding-top: 2.5rem;
-    padding-bottom: .5rem;
+    padding-bottom: 12rem;
 
-    h2 {
+    h3 {
         text-align: center;
         font-size: 3rem;
         margin-bottom: 1rem;
