--- a/src/components/Page/Projects/Project/Project.scss
+++ b/src/components/Page/Projects/Project/Project.scss
@@ -67,6 +67,7 @@
             gap: 1rem;
             font-size: 1rem;
             opacity: 0.6;
+            margin: .5rem 0;
         }
     }
 }
