--- a/src/components/Page/Contact/Contact.scss
+++ b/src/components/Page/Contact/Contact.scss
@@ -11,6 +11,10 @@
 
     .description {
         margin: 1.5rem 0 5rem 0;
+
+        @media (max-width: 960px) {
+            margin: 1.5rem 0 2rem 0;
+        }
     }
 
     .informations {
@@ -22,6 +26,13 @@
         .Button {
             margin: 1rem;
         }
+
+        @media (max-width: 800px) {
+            padding: 4rem 10rem;
+            display: contents;
+            gap: 2rem;
+            text-align: center;
+        }
     }
 
     .Form {
@@ -31,6 +42,10 @@
 
         .Button {
             text-align: center;
+        }
+
+        @media (max-width: 800px) {
+            width: 90%;
         }
     }
 }
