--- a/src/components/Page/Contact/Contact.scss
+++ b/src/components/Page/Contact/Contact.scss
@@ -48,4 +48,9 @@
             width: 90%;
         }
     }
+
+    @media (max-width: 960px) {
+        height: initial!important;
+        padding-bottom: 2rem;
+    }
 }
